infra/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`grafana.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: grafana
          port: service
  tls:
    secretName: cert-k-joshuachp-dev
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
